# Vectors

./: LICENSE  README.md  setup.cfg
src/: vec.py  vec2.py  vec3.py
