[metadata]
name = Vectors-JsonJ
version = 0.0.1
author = Jason Jin
author_email = jinshengxi@outlook.com
description = A package that contains an implementation of 2d vectors, 3d vectors, and n-d vectors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jasonshengxi/Vectors
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src